# apex-trade

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_stage1_schema.py  0002_exchange_account_sync_metadata.py  0003_backtest_tables.py  0004_feature_flag_system_tables.py  0006_portfolio_analytics.py  0007_trade_journals.py
backend/app/: __main__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  constants.py  dependencies.py  encryption.py  enums.py  exceptions.py  health.py  lifecycle.py  logging.py  metadata.py  security.py  settings.py
backend/app/database/: base.py  session.py
backend/app/events/: __init__.py  bus.py  dlq.py  handler.py  types.py
backend/app/middlewares/: audit.py  metrics.py  rate_limit.py  rbac.py  request_body.py
backend/app/schemas/: audit.py  auth.py  backtest.py  common.py  exchange.py  feature_flag.py  intelligence.py  journal.py  market.py  notification.py  portfolio.py  risk.py  trading.py  trading_safety.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  backtest_engine.py  backtest_metrics.py  backtest_report.py  backtest_service.py  base.py  exchange_service.py  execution_service.py  feature_flag_service.py  health_service.py  intelligence_service.py  journal_ai_service.py  journal_analytics_service.py  journal_search_service.py  market_service.py  news_service.py  notification_service.py  paper_trading_service.py  plugin_registry.py  portfolio_analytics_service.py  portfolio_service.py  risk_service.py  sentiment_service.py  signal_service.py  strategy_config_manager.py  strategy_engine.py  strategy_service.py  token_blacklist.py  trade_journal_service.py  trading_service.py  user_service.py
backend/app/shared/: __init__.py  base.py  protocols.py  responses.py  result.py  types.py  utils.py  validators.py
backend/app/tasks/: __init__.py  celery_app.py  journal_enrichment.py
backend/migrations/: env.py
backend/plugins/: __init__.py
backend/plugins/arbitrage/: __init__.py  plugin.py
backend/plugins/breakout/: __init__.py  plugin.py
backend/plugins/custom/: sandbox.py
backend/plugins/mean_reversion/: __init__.py  plugin.py
backend/plugins/scalping/: __init__.py  plugin.py
backend/plugins/trend_following/: __init__.py  plugin.py
backend/src/: __init__.py  main.py
backend/src/application/: exceptions.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py
backend/src/presentation/: __init__.py
backend/src/shared/: __init__.py
backend/tests/: __init__.py  conftest.py  test_audit_middleware.py  test_backtest.py  test_event_bus.py  test_exchange_abstraction.py  test_exchange_and_risk.py  test_exchange_resilience.py  test_feature_flags.py  test_health.py  test_intelligence.py  test_strategy_plugin_roadmap.py  test_strategy_plugins.py
backend/tests/e2e/: conftest.py  test_api_endpoints.py
backend/tests/integration/: conftest.py  test_database_repositories.py  test_event_bus_integration.py  test_exchange_service.py  test_redis_integration.py  test_risk_service_integration.py  test_safety_flow.py
backend/tests/performance/: test_load_api.py
backend/tests/unit/: test_audit_middleware.py  test_backtest.py  test_event_bus.py  test_exchange_abstraction.py  test_exchange_resilience.py  test_exposure_monitor.py  test_feature_flags.py  test_health.py  test_intelligence.py  test_journal_analytics.py  test_journal_repository.py  test_journal_service.py  test_kill_switch.py  test_market_data_quality.py  test_portfolio_analytics.py  test_post_trade_validator.py  test_pre_trade_validator.py  test_reconciliation.py  test_strategy_plugin_roadmap.py  test_strategy_plugins.py  (+1 more)
telegram/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
telegram/src/: bot.py
telegram/tests/: conftest.py
(+443 files in other folders)
